--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,15 @@ opencv-python>=4.1.2
 matplotlib>=3.2.2
 ipyleaflet>=0.14.0
 sympy>=1.10.1
+seaborn
 
 # Machine learning ----------------------------
 sklearn
+
+# Time Series ---------------------------------
+datetime
+chart_studio 
+cufflinks 
+statsmodels
+
+pmdarima
